fixes #48
Disabled input fields don't look inaccessible - patch uses $dark-grey there

--- a/darkmode.scss
+++ b/darkmode.scss
@@ -1288,6 +1288,12 @@ body {
 		background-color: $white;
 
 	}
+	
+	input[type="text"]:disabled {
+		
+    		background-color: $dark-grey;
+		
+	}
 
 	::-webkit-input-placeholder {
 
